crates/kula-core/tests/corpus/valid/01-single-person.kula
person alice name:"Alice Sharma" gender:female
