crates/kula-core/tests/corpus/invalid/rule-01-duplicate-id.kula
person alice name:"Alice" gender:female
person alice name:"Other Alice" gender:female
